2003-05-25  Jacob Smullyan  <smulloni@smullyan.org>

	* util/rpm/skunkweb.spec, util/rmp/skunkweb.init,
	util/rpm/skunkweb.logrotate: more improvements from SR, including
	log rotation and init scripts, now moved into uti/rpm.

2003-05-24  Jacob Smullyan  <smulloni@smullyan.org>

	* skunkweb.spec: added some configuration with the intent of
	making the mod_skunkweb build with apache 1.3.

	* pylibs/PyDO/psycopgconn.py, pylibs/PyDO/PyDBI.py
	(_driverConfig): S. Reifschneider's contributed driver for the
	psycopg postgresql driver.

	*:Makefile.in, skunkWeb/Makefile.in,
	SkunkWeb/Services/Makefile.in, SkunkWeb/mod_skunkweb/Makefile.in,
	docs/Makefile.in, pylibs/Makefile.in: another build patch for RPM
	from SR, this time for INSTALL_FLAGS. skunkweb.spec: now builds
	with Python 2.1 or 2.2.

	* SkunkWeb/configure.in, SkunkWeb/configure, configure.in,
	configure: CACHE, DOCROOT, DOCSDIR and LOGDIR were not getting set
	properly, The configure options for them now all begin with
	"--with-".

	* skunkweb.spec: incorporating SR's latest fixes to what I screwed
	up.
	(Requires): changing path of cache directory argument to cache reaper.

	* SkunkWeb/mod_skunkweb/Makefile.in: adding DESTDIR to install.

2003-05-23  Jacob Smullyan  <smulloni@smullyan.org>

	* Makefile.in, SkunkWeb/Makefile.in,
	SkunkWeb/mod_skunkweb/Makefile.in: absorbing SR's build patches;
	added an APXSFLAGS variable for the rpm spec's sake.

	* skunkweb.spec: Sean Reifschneider's revised rpm spec, revised
	and probably screwed up by me (js).

2003-05-22  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyDO/ogenscript.py, pylibs/PyDO/pgenscript.py,
	pylibs/PyDO/sapdbgenscript.py: changed shebang from
	/usr/local/bin/python to /usr/bin/env python (thanks Sean
	Reifschneider).

	* docs/stmlrefer/stmlrefer.tex (chapter{Internet Services}): added
	Frank Tegtmeyer's patch for MailServices documentation.
	(section{\texttt{<:args:>}}): typo (was missing quotes).
